kubernetes/cad-FrontendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: drescherflo/cad-gym-frontend:latest
          ports:
            - containerPort: 80
