kubernetes/cad-WorkoutServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout
spec:
  selector:
    matchLabels:
      app: workout
  replicas: 1
  template:
    metadata:
      labels:
        app: workout
    spec:
      containers:
        - name: workout
          image: cad-workout:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7083
