kubernetes/cad-AuthServiceService.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-service
spec:
  selector:
    app.kubernetes.io/name: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7080
      name: http
