kubernetes/cad-UserServiceService.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    run: user
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 7082
