kubernetes/cad-WorkoutServiceService.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout
  labels:
    run: workout
spec:
  selector:
    app: workout
  ports:
    - protocol: TCP
      port: 7083
