kubernetes/cad-AuthServiceIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  defaultBackend:
    service:
      name: auth-service-service
      port:
        number: 80
